--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
+    <!-- This is the minified production version of Parse JS -->
+<script type="text/javascript" src="https://unpkg.com/parse/dist/parse.min.js"></script>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
